Lenguajes y automatas 1/comp.java
/* Generated By:JavaCC: Do not edit this line. comp.java */
import java.io.*;
import java.io.PrintStream;
import java.util.Hashtable;
import java.lang.String;
import java.util.ArrayList;
class comp implements compConstants {
        static Token var;
        static int cont=0;
        static int c=0;
        static String valor=" ";
        public static void main( String[] args )throws ParseException, Exception
        {

                try
                {
                comp analizador = new comp( System.in ) ;
                        analizador.Programa();
                        Tabla.imprimir();
                        System.out.println("\u005ctAnalizador ha terminado.");
                }
                catch(ParseException e)
                {
                        Tabla.imprimir();
                        System.out.println("\u005ctAnalizador ha terminado.");
                }
        }

  static final public void Programa() throws ParseException {
        String mod=" ";
        String tipo=" ";
        String nombre=" ";
    try {
      modifier();
                  mod=token.image;
                  cont++;
    } catch (Exception e1) {

    }
    try {
      jj_consume_token(clase);
                  tipo=token.image;
                  cont++;
    } catch (Exception e2) {
                System.out.println("class "+e2.getMessage());
    }
    try {
      jj_consume_token(IDENTIFIER);
                  nombre=token.image;
                  cont++;
    } catch (Exception e3) {
                System.out.println("identificador "+e3.getMessage());
    }
          if (cont==3) {
                Tabla.insertar(mod,tipo,nombre,"  ");
        }
    try {
      jj_consume_token(Izq);
    } catch (Exception e4) {
                System.out.println("llave izquierda "+e4.getMessage());
    }
    field_declaration();
    if_statement();
    try {
      jj_consume_token(Der);
    } catch (Exception e5) {
                System.out.println("llave derecha "+e5.getMessage());
    }
  }

  static final public void modifier() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        jj_consume_token(PUBLIC);
        break;
      case PRIVATE:
        jj_consume_token(PRIVATE);
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Exception e) {
                System.out.println("modifier "+e.getMessage());
    }
  }

  static final public void modifi() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        jj_consume_token(PUBLIC);
        break;
      case PRIVATE:
        jj_consume_token(PRIVATE);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                  c++;
    } catch (Exception e) {
                System.out.println("modifier "+e.getMessage());
    }
  }

  static final public void field_declaration() throws ParseException {
    variable_declaration();
    try {
      jj_consume_token(SEMICOLON);
    } catch (Exception e) {
                System.out.println("field_declaration "+e.getMessage());
    }
  }

  static final public void variable_declaration() throws ParseException {
        String mod=" ";
        String tipo=" ";
        String nombre=" ";
    try {
      modifi();
                  mod=token.image;
    } catch (Exception e) {

    }
    try {
      type();
                  tipo=token.image;
    } catch (Exception e1) {
                        System.out.println("type_specifier "+e1.getMessage());
    }
    try {
      variable_declarator();
                          valor=token.image;
                          nombre=var.image;
    } catch (Exception e2) {

    }
                  if(c==4) {
                Tabla.insertar(mod,tipo,nombre,valor);

        }
  }

  static final public void type() throws ParseException {
    type_specifier();
  }

  static final public void variable_declarator() throws ParseException {
    try {
      var = jj_consume_token(IDENTIFIER);
                  c++;
    } catch (Exception e) {
                System.out.println("variable_declarator identificador "+e.getMessage());
    }
    try {
      jj_consume_token(Asignacion);
    } catch (Exception e1) {
                System.out.println("variable_declarator asignacion "+e1.getMessage());
    }
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Int:
        jj_consume_token(Int);
        break;
      case True:
        jj_consume_token(True);
        break;
      case False:
        jj_consume_token(False);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                  c++;
    } catch (Exception e2) {
                System.out.println("variable_declarator asignacion "+e2.getMessage());
    }
  }

  static final public void expression() throws ParseException {
    testing_expression();
  }

  static final public void testing_expression() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Int:
        jj_consume_token(Int);
        break;
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Exception e) {
                System.out.println("testing_expression "+e.getMessage());
    }
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Mayor:
        jj_consume_token(Mayor);
        break;
      case Menor:
        jj_consume_token(Menor);
        break;
      case MenorIgual:
        jj_consume_token(MenorIgual);
        break;
      case MayorIgual:
        jj_consume_token(MayorIgual);
        break;
      case Comparacion:
        jj_consume_token(Comparacion);
        break;
      case Diferente:
        jj_consume_token(Diferente);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Exception e1) {
                System.out.println("testing_expression "+e1.getMessage());
    }
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Int:
        jj_consume_token(Int);
        break;
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Exception e2) {
                System.out.println("testing_expression "+e2.getMessage());
    }
  }

  static final public void type_specifier() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Boolean:
        jj_consume_token(Boolean);
        break;
      case integer:
        jj_consume_token(integer);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                  c++;
    } catch (Exception e1) {
                                     System.out.println("type_specifier "+e1.getMessage());
    }
  }

  static final public void if_statement() throws ParseException {
    try {
      jj_consume_token(If);
    } catch (Exception e) {
                System.out.println("if_statement "+e.getMessage());
    }
    try {
      jj_consume_token(ParAP);
    } catch (Exception e1) {
                System.out.println("if_statement "+e1.getMessage());
    }
    expression();
    try {
      jj_consume_token(ParCi);
    } catch (Exception e2) {
                System.out.println("if_statement "+e2.getMessage());
    }
    statement();
  }

  static final public void statement() throws ParseException {
    statement_block();
  }

  static final public void statement_block() throws ParseException {
    try {
      jj_consume_token(Izq);
    } catch (Exception e) {
                System.out.println("statement_block "+e.getMessage());
    }
    aritmetica_expression();
    try {
      jj_consume_token(Der);
    } catch (Exception e1) {
                System.out.println("statement_block "+e1.getMessage());
    }
    statement();
  }

  static final public void aritmetica_expression() throws ParseException {
    try {
      jj_consume_token(IDENTIFIER);
    } catch (Exception e) {
                System.out.println("aritmetica_expression "+e.getMessage());
    }
    try {
      jj_consume_token(Asignacion);
    } catch (Exception e1) {
                System.out.println("aritmetica_expression "+e1.getMessage());
    }
    try {
      jj_consume_token(Int);
    } catch (Exception e2) {
                System.out.println("aritmetica_expression "+e2.getMessage());
    }
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Mas:
        jj_consume_token(Mas);
        break;
      case Menos:
        jj_consume_token(Menos);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Exception e3) {
                System.out.println("aritmetica_expression "+e3.getMessage());
    }
    try {
      jj_consume_token(Int);
    } catch (Exception e4) {
                System.out.println("aritmetica_expression  "+e4.getMessage());
    }
    try {
      jj_consume_token(SEMICOLON);
    } catch (Exception e5) {
                System.out.println("aritmetica_expression "+e5.getMessage());
    }
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public compTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[8];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x28000,0x28000,0x8c0000,0x1800000,0x7e,0x1800000,0x500000,0x300,};
   }

  /** Constructor with InputStream. */
  public comp(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public comp(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new compTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public comp(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new compTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public comp(compTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(compTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[30];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 8; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 30; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
